# napari-seg

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_seg/: _widget.py  napari.yaml
src/napari_seg/_tests/: test_reader.py  test_widget.py  test_writer.py
