[metadata]
name = napari_seg
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/salirezav/napari-seg
author = Seyed Alireza Vaezi
author_email = s.alireza.v@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/salirezav/napari-seg/issues
    Documentation = https://github.com/salirezav/napari-seg#README.md
    Source Code = https://github.com/salirezav/napari-seg
    User Support = https://github.com/salirezav/napari-seg/issues

[options]
packages = find:
install_requires =
    awolny
    lcerrone
    magicgui
    numpy
    pillow
    plantseg
    pytorch
    qtpy
    tifffile
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-seg = napari_seg:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
